minor changes with MA.

--- a/sandbox/ipython-notebooks/spatially-varying-M.ipynb
+++ b/sandbox/ipython-notebooks/spatially-varying-M.ipynb
@@ -11,29 +11,19 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import dolfin as df"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "import dolfin as df\n",
       "mesh = df.Interval(15,0,1)\n",
       "\n",
       "CG1 = df.FunctionSpace(mesh,'CG',1)  \n",
       "DG0 = df.FunctionSpace(mesh,'DG',0)  \n",
       "\n",
       "f = df.interpolate(df.Expression(\"x[0]*x[0]\"),CG1)\n",
-      "g = df.interpolate(df.Expression(\"2.0\"),DG0)\n",
+      "g = df.interpolate(df.Expression(\"2.\"),DG0)\n",
       "\n",
       "import numpy as np\n",
       "import pylab\n",
       "pylab.figure(figsize=(10,8))\n",
-      "x = linspace(0,1,100)\n",
+      "x = np.linspace(0,1,100)\n",
       "y = [f(x_) for x_ in x]\n",
       "pylab.plot(x,y,'o')"
      ],
@@ -41,17 +31,10 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "output_type": "pyout",
+       "prompt_number": 7,
        "text": [
-        "Calling FFC just-in-time (JIT) compiler, this may take some time.\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0.668148148148\n"
+        "[<matplotlib.lines.Line2D at 0x49a5410>]"
        ]
       },
       {
@@ -59,7 +42,7 @@
        "png": "iVBORw0KGgoAAAANSUhEUgAAAl0AAAHcCAYAAADshh/LAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XFs1Od9P/CPM6OGJmkCCYFiWyIYVkwpkIgsRV2p08qY\nBY1NS7ZSiSpNGWNRCWHbH51CUYE0bdI/Njmm2pjUJl2b5pdqq0YkiEvI6rI2NUQNDfolUcq8sBoa\notJA0zYhgHO/P0j9w/h75nzn+959714vyRJ3frh7qq9K3nqez/N5GnK5XC4AACirSyo9AQCAeiB0\nAQCkQOgCAEiB0AUAkAKhCwAgBUIXAEAKSgpdn/70p2Pq1KnxgQ98IO+Y9evXx+zZs2PBggVx4MCB\nUr4OACCzSgpdd9xxR/T09OT9/a5du+K///u/49ChQ/Ev//Ivceedd5bydQAAmdVYyl/+8Ic/HIcP\nH877+8cffzxuv/32iIi46aab4uTJk/Hqq6/G1KlTh8Y0NDSUMgUAgFQV21e+rDVdR48ejZaWlqHX\nzc3NceTIkRHjcrmcn4z+fP7zn6/4HPx4fvX449ll+8fzy9bP0qUbIyL3zk/xyl5In8sNn6CVLQAg\nS9avXxqtrRtL/pySthcvpqmpKQYGBoZeHzlyJJqamsr5lQAA42r58iUREdHdvSm++93iP6esK10r\nVqyIf/3Xf42IiL6+vrjqqquG1XORfe3t7ZWeAiXw/LLLs8s2zy97li9fEj0995b0GQ25C/f/xuAT\nn/hEfP/734/jx4/H1KlTY8uWLXHmzJmIiFi7dm1ERKxbty56enrisssui4ceeihuuOGG4RNoaBix\nBQkAUCk7d+6NBx/cHW+91RjvetfZWL9+6dBqVym5paTQNR6ELgCgWuzcuTfuvvu70d9/39B7ra0b\no6urM5YvX1JSbtGRHgDgHQ8+uHtY4IqI6O+/L7q7nyz5s4UuAIB3vPVW8hnDU6d+r+TPFroAAN7x\nrnedTXz/0ksHS/5soQsA4B1JPblaW++Ju+7qKPmzFdIDAJxn58690d39ZJw69Xtx6aWDcdddHU4v\nAgAUa7TWEPmUklvK2pEeAKAaJbWG6O8/t614seBVLDVdAEDdKWdriHyELgCg7pSzNUQ+QhcAUHfK\n2RoiH6ELAKg75WwNkY/TiwBAXRqtNUQ+WkYAAIyimPYQSbSMAADIoxLtIZKo6QIAalol2kMkEboA\ngJpWifYQSYQuAKCmVaI9RBKhCwCoaZVoD5HE6UUAoOYV0x4iiZYRAAAxfq0h8tEyAgCoe9XSGiIf\nNV0AQE2oltYQ+QhdAEBNqJbWEPkIXQBATaiW1hD5CF0AQE2oltYQ+Ti9CADUjPFqDZGPlhEAACnQ\nMgIAqCvl7sdVDkIXAJAp1d6PKx+F9ABAplR7P658hC4AIFOqvR9XPkIXAJAp1d6PKx+hCwDIlGrv\nx5WPlhEAQOaUux9XPvp0AQA1q5raQ+jTBQDUpKy2h0iipgsAqFpZbQ+RROgCAKpWVttDJBG6AICq\nldX2EEmELgCgamW1PUQSpxcBgKpWqfYQSbSMAAAyr5paQ+SjZQQAkGm11BoiHzVdAEDF1VJriHyE\nLgCg4mqpNUQ+QhcAUHG11BoiH6ELAKi4WmoNkY/TiwBAVaim1hD5aBkBAGRGFlpD5KNlBACQCfXQ\nGiIfNV0AQGrqoTVEPkIXAJCaemgNkY/QBQCkph5aQ+QjdAEAqamH1hD5OL0IAKQqC60h8tEyAgCo\nSlluD5FEywgAoOrUc3uIJGq6AICyqOf2EEmELgCgLOq5PUQSoQsAKIt6bg+RROgCAMqinttDJFFI\nDwCUbLRTit3dm85rD7GsLovoI4QuAKBEFzulWK8h60K2FwGAkjilWBihCwAoiVOKhSkpdPX09MSc\nOXNi9uzZ8cADD4z4/fHjx2PZsmWxcOHCmDdvXjz88MOlfB0AUIWcUixM0aFrcHAw1q1bFz09PfHC\nCy/Eo48+Gi+++OKwMdu2bYvrr78+fvKTn0Rvb2/83d/9XZw9m/xgAIBsckqxMEUX0u/fvz9mzZoV\nM2bMiIiIlStXxo4dO6KtrW1ozHvf+944ePBgRES8/vrrcfXVV0djo9p9AKglTikWpugEdPTo0Whp\naRl63dzcHPv27Rs2Zs2aNfHRj340pk+fHr/+9a/j29/+duJnbd68eejP7e3t0d7eXuy0AIAyytca\nolZPKfb29kZvb++4fFbRoauhoeGiY774xS/GwoULo7e3N/r7+6OjoyOee+65uOKKK4aNOz90AQDV\nqR4vsL5wMWjLli1Ff1bRNV1NTU0xMDAw9HpgYCCam5uHjXn66afjz//8zyMiorW1Na677rp46aWX\niv1KAKCCtIYoTdGha9GiRXHo0KE4fPhwnD59Oh577LFYsWLFsDFz5syJPXv2RETEq6++Gi+99FLM\nnDmztBkDABWhNURpit5ebGxsjG3btkVnZ2cMDg7G6tWro62tLbZv3x4REWvXro177rkn7rjjjliw\nYEG8/fbb8eUvfzkmT548bpMHANKjNURpGnK5XK6iE2hoiApPAQAoQFJNV2vrPdHVVT8nFUvJLUIX\nAFCwnTv3Rnf3k+e1huiom8AVIXQBAGWQrz1EPSslt+hUCgCMUI/tIcrNhdcAwAjaQ4w/oQsAGEF7\niPEndAEAI2gPMf6ELgBghPXrl0Zr68Zh77W23hN33dVRoRlln9OLAECiem8PkUTLCACgaFpDFE7L\nCACgKFpDpEdNFwDUMa0h0iN0AUAd0xoiPUIXANQxrSHSI3QBQB3TGiI9Ti8CQB1JOqkYEVpDFEjL\nCADgopJOKra2boyurk4hq0Cl5BbbiwBQJ5xUrCyhCwDqhJOKlSV0AUCdcFKxsoQuAKgTTipWlmuA\nAKAGjXafYnf3pvNOKi5TRJ8SoQsAaszF7lMUsirD9iIA1BinFKuT0AUANcYpxeokdAFAjXFKsToJ\nXQBQY5xSrE6uAQKAGrRz5173KZaBuxcBoE6N1hqC8VdKbtEyAgAy6mKtIaguaroAIKO0hsgWoQsA\nMkpriGwRugAgo7SGyBahCwAySmuIbHF6EQAyIumkYkRoDZEiLSMAoMYlnVRsbd0YXV2dQlaKSskt\nthcBIAOcVMw+oQsAMsBJxewTugAgA5xUzD6hCwAywEnF7HMNEABUmdHuU+zu3nTeScVliugzROgC\ngCpysfsUhazssr0IAFXEKcXaJXQBQBVxSrF2CV0AUEWcUqxdQhcAVBGnFGuXQnoAqBCnFOuL0AUA\nFeCUYv2xvQgAFeCUYv0RugCgApxSrD9CFwBUgFOK9UfoAoAKcEqx/jTkcrlcRSfQ0BAVngIAlF3S\nScWIiO7uJ887pdihgL7KlZJbhC4AKLOkk4qtrRujq6tTyMqYUnKL7UUAKDMnFYkQugCg7JxUJELo\nAoCyc1KRCKELAMrOSUUiXAMEAOPKfYrkI3QBwDhxnyKjsb0IAOPEKUVGI3QBwDhxSpHRCF0AME6c\nUmQ0QhcAjBOnFBmNQnoAKIJTioyV0AUAY+SUIsUoaXuxp6cn5syZE7Nnz44HHnggcUxvb29cf/31\nMW/evGhvby/l6wCgKjilSDGKXukaHByMdevWxZ49e6KpqSluvPHGWLFiRbS1tQ2NOXnyZHzmM5+J\n7373u9Hc3BzHjx8fl0kDQCU5pUgxil7p2r9/f8yaNStmzJgREyZMiJUrV8aOHTuGjfnWt74Vt956\nazQ3N0dExDXXXFPabAGgCjilSDGKXuk6evRotLS0DL1ubm6Offv2DRtz6NChOHPmTNx8883x61//\nOu6+++745Cc/OeKzNm/ePPTn9vZ225AAVLX165dGf//GYVuM504pLqvgrCiH3t7e6O3tHZfPKjp0\nNTQ0XHTMmTNn4tlnn42nnnoq3njjjVi8eHF88IMfjNmzZw8bd37oAoBqk3RSsaur0ynFOnDhYtCW\nLVuK/qyiQ1dTU1MMDAwMvR4YGBjaRvydlpaWuOaaa2LixIkxceLEWLJkSTz33HMjQhcAVKt8JxW7\nujqjp+feCs6MrCm6pmvRokVx6NChOHz4cJw+fToee+yxWLFixbAxf/InfxI/+MEPYnBwMN54443Y\nt29fzJ07t+RJA0BanFRkvBS90tXY2Bjbtm2Lzs7OGBwcjNWrV0dbW1ts3749IiLWrl0bc+bMiWXL\nlsX8+fPjkksuiTVr1ghdAGSKk4qMl4ZcLper6AQaGqLCUwCAvDo7Pxe7d38h4f1NthfrUCm5xd2L\nADAK9ykyXlwDBADvcJ8i5SR0AUC4T5Hys70IAOGUIuUndAFAOKVI+QldABDuU6T81HQBUJcuLJpf\nvHi6+xQpK326AKg7SUXzra0bY9Wqpujre+W8U4odCugZppTcInQBUHc0PKVYmqMCwBgomqcShC4A\n6o6ieSpB6AKg7rjah0pwehGAmuZqH6qF0AVAzXK1D9XE9iIANcvVPlQToQuAmuWUItVE6AKgZjml\nSDURugCoWU4pUk0U0gNQE5xSpNoJXQBknlOKZIHtRQAyzylFskDoAiDznFIkC4QuADLPKUWyQE0X\nAJlzYdH84sXTo79/47AtxnOnFJdVcJYwXEMul8tVdAINDVHhKQCQIUlF862tG2PVqqbo63vlvFOK\nHQroGXel5BahC4BM6ez8XOze/YWE9zdFT8+9FZgR9aSU3KKmC4BMUTRPVgldAGSKonmySiE9AFUr\nqcv8+vVLFc2TSWq6AKhK+Qrmu7o6IyKiu/tJRfOkTiE9ADVHwTzVSCE9ADVHwTy1RugCoCopmKfW\nKKQHoOIUzFMP1HQBUFEK5skShfQAZJaCebJEIT0AmaVgnnohdAFQUQrmqRdCFwAVtX790mht3Tjs\nvXMF8x0VmhGUh5ouAFKVdFIxQsE82aCQHoBMGO2kopBFFiikByATHnxw97DAFRHR339fdHc/WaEZ\nQXqELgBS46Qi9UzoAiA1TipSz1wDBEBZuNoHhlNID8C4c7UPtcrpRQCqiqt9qFVOLwJQVRTMw0hC\nFwDjTsE8jKSQHoCSKJiHwqjpAqBoCuapNwrpAagIBfPUG4X0AFSEgnkonNAFQNEUzEPhFNIDULAL\ni+YXL56uYB4KpKYLgILkK5pftaop+vpeUTBPXVBID0DZKZoHhfQApEDRPJRG6AKgIIrmoTQK6QEY\nQZd5GH9qugAYRpd5yE8hPQDjRsE85KeQHoBxo2AeykNNF0Cdu7B+6/XXTySOUzAPpRG6AOpYUv3W\ntGmrY9q0v41jx/5h6D0F81A6NV0AdSxf/dYNN6yJKVOmKZiHC1SspqunpyfmzJkTs2fPjgceeCDv\nuGeeeSYaGxvjO9/5TilfB8A4y1e/dcUVTdHTc2/09m6Onp57BS4YB0WHrsHBwVi3bl309PTECy+8\nEI8++mi8+OKLieM++9nPxrJly6xoAVQZDU8hPUWHrv3798esWbNixowZMWHChFi5cmXs2LFjxLju\n7u647bbbYsqUKSVNFIDS7Ny5Nzo7Pxft7Zujs/NzsXPn3li/fmm0tm4cNu5c/VZHhWYJtavoQvqj\nR49GS0vL0Ovm5ubYt2/fiDE7duyI//zP/4xnnnkmGhoaEj9r8+bNQ39ub2+P9vb2YqcFQIKkgvn+\n/nMNT7u6OqO7e9N59VvLbCfCO3p7e6O3t3dcPqvo0JUvQJ1vw4YNcf/99w8VneXbXjw/dAEw/h58\ncPewwBUR0d9/X3R3b1KzBaO4cDFoy5YtRX9W0aGrqakpBgYGhl4PDAxEc3PzsDE//vGPY+XKlRER\ncfz48XjiiSdiwoQJsWLFimK/FoAiaHgKlVd06Fq0aFEcOnQoDh8+HNOnT4/HHnssHn300WFj/ud/\n/mfoz3fccUf88R//scAFUAEK5qHyig5djY2NsW3btujs7IzBwcFYvXp1tLW1xfbt2yMiYu3ateM2\nSQAKd2GH+fXrl8b69Uujv3/jBZdYa3gKadIcFaCGJBXMt7aeK5iPiOjuflLDUyhBKblF6AKoIfk6\nzHd2niuYB0pTsY70AFQXBfNQvYQugBqiYB6qV9GF9ABU3oVF84sXT1cwD1VKTRdARuUrml+1qin6\n+l5RMA9loJAeoA4pmof0KaQHqEOK5iFb1HQBZEBSw1NF85AtQhdAlUuq3ervP1e7pWgeskNNF0CV\nG6126667OnSZhxSVklusdAFUudFqt5YvXyJkQUYIXQBVRO0W1C6hC6BKqN2C2qamC6BKqN2C6qem\nC6AGqN2C2qY5KkCVULsFtc1KF0CFuKwa6ouaLoAKcFk1ZJMLrwEyxmXVkE0uvAbIGJdVQ/1R0wVQ\nZhqeAhFCF0BZaXgK/I6aLoAy0vAUaovmqABVSsNT4HeELoBxonYLGI3QBTAO1G4BF6OmC2AcqN2C\n+qCmC6DC1G4BFyN0ARThwvqt118/kThO7RbwO0IXwBgl1W9Nm7Y6pk372zh27B+G3lO7BZxPTRfA\nGOWr37rhhjUxZco0tVtQw9R0AaQoX/3WFVc0RU/P5nQnA2SGC68BxkjvLaAYVroARpHU8HT9+qV6\nbwFjpqYLII+kgvnW1o3R1dUZEaH3FtShUnKL0AWQx2gNT3t67q3AjIBKKyW3qOkCyGO0hqcAY6Wm\nC+AdGp4C5SR0AYSGp0D5qekCCA1PgcJojgowBkltIDQ8BcpN6ALqStI2Yn//xnjPe04mjle/BYwX\npxeBuvLgg7uHBa6IiP7++6Kh4XS0tm4c9v65+q2ONKcH1DArXUBdGW0bcevWj0Z396bz6reWqd8C\nxo3QBdSspNqt0e5NXL58iZAFlI3QBdSkfLVbq1Y1uTcRqAgtI4CaNNoVPnfd1eHeRKAoWkYAXGC0\nK3xsIwKVIHQBNcEVPkC1E7qAzHOFD5AFarqAzHOFD5AWNV1AXXOFD5AFQheQKWPtvQVQLYQuIDP0\n3gKyTE0XkBl6bwGVpqYLqDlJ24h6bwFZJnQBVSffNuJ73nMycbzaLSALLqn0BAAu9OCDu4cFroiI\n/v77oqHhdLS2bhz2/rnarY40pwdQFCtdQNUZrQXE1q0fje7uTefVbi2zrQhkgtAFVNxYrvBRuwVk\nldAFVJQrfIB6oWUEUFGu8AGyRMsIIBPG0gbCFT5ArRG6gFRoAwHUOy0jgFRoAwHUu5JDV09PT8yZ\nMydmz54dDzzwwIjfP/LII7FgwYKYP39+fOhDH4qDBw+W+pVABo22jdjV1RmdnZviIx/ZHJ2dm6Kr\nSxsIoPaUtL04ODgY69atiz179kRTU1PceOONsWLFimhraxsaM3PmzNi7d29ceeWV0dPTE3/1V38V\nfX19JU8cqF5JtVvvetfZxLHaQAD1oqTQtX///pg1a1bMmDEjIiJWrlwZO3bsGBa6Fi9ePPTnm266\nKY4cOVLKVwJVLl/t1qpVTdHfv3HY+9pAAPWkpNB19OjRaGlpGXrd3Nwc+/btyzv+q1/9atxyyy0j\n3t+8efPQn9vb26O9vb2UaQEVlK92q69vU3R1deomD2RKb29v9Pb2jstnlRS6GhoaCh77ve99L772\nta/FD3/4wxG/Oz90Adly4VbiK6/8NnHcqVO/ZxsRyJwLF4O2bNlS9GeVFLqamppiYGBg6PXAwEA0\nNzePGHfw4MFYs2ZN9PT0xKRJk0r5SqCKJG0lTpz48cSxWkAA9a6k04uLFi2KQ4cOxeHDh+P06dPx\n2GOPxYoVK4aN+dnPfhZ/9md/Ft/85jdj1qxZJU0WqC5JW4lvvvmZmDjxr4e9pwUEQIkrXY2NjbFt\n27bo7OyMwcHBWL16dbS1tcX27dsjImLt2rWxdevWOHHiRNx5550RETFhwoTYv39/6TMHUlV4N/kl\nMXPmI9HcrHYL4HzuXgQuKmkbsbX1XDf5Awe+MmJ8Z+em6Om5N80pAqSilNyiIz1wUbrJA5TO3YvA\nCIWeSLziiqbYuvWj2kAAFEDoAoYZ64lEbSAACmN7ERjGiUSA8rDSBQzjRCJAeQhdUMfGcjF1c/O1\nTiQClEDogjrlYmqAdOnTBXWqs/NzsXv3FxLe3xR33dUR3d1PnreV2GErESBKyy1WuqAOFN5N3sXU\nAOUidEGNy7eN+J73nEwc72JqgPKwvQg15sJVrV/84kTiVT033LAmfvWra0fUbnV1OZUIkI/tRSAi\nkle1Lr309sSxuskDpEvoghqS1Nj01KmWxLG6yQOkS+iCjCq8OH5pXHrpnXHq1D8NvaMFBED6hC7I\noLEVxy+JuXO/EVOm2EYEqCSF9JBB+XpsKY4HKC+F9FDDxtJjS3E8QPUSuqCKFdNjS3E8QHW6pNIT\nAPJLOo3Y339fNDScjtbWjcPeP1cc35Hm9AAYAytdUEUu3Ep85ZXfJo6zjQiQPUIXVImkrcSJEz+e\nONY2IkD2CF1QAUnF8UlbiW+++ZmYOPGv4803/3noPT22ALJJ6IKU5SuOf/e730gYvSRmznwkmptt\nIwJkndAFKctXHH/11clbic3N10ZPz71pTA2AMhK6oIzG0mNr2rSr4qqrNo5obGorEaA2CF1QJmPt\nsdXcfG3cdVeHE4kANco1QDBOLlzV+sUvTsSBA18ZMc5VPQDZ5RogqLCkVa1LL709caweWwD1SeiC\ncZBUHH/qVEviWD22AOqT0AVjVHhx/NK49NI749Spfxp6R2E8QP0SumAMxlYcvyTmzv1GTJliGxEA\nhfQwKsXxAJxPIT2UgeJ4AMaT0AVR+F2IiuMBKJbQRd0b212IiuMBKI6aLupKvhWt3bu/MGLs1Vd/\nPH75y8dGvH/DDWtiypRp520jdljhAqgTarqgAGNb0cp/F+LWrZ8UsgAYM6GLupFUo9Xff19cffXH\nE8e7CxGA8SR0UbMu3Ep85ZXfJo7Lt6L1u4AlZAEwHoQualLSVuLEiVa0AKgchfRkXuHF8Xtj4sRv\nxZtv/vPQOxqYAjAWCumpC0nhKiLGUBy/JGbOfCSam61oAZA+oYtMGO3Ow/7+4dfyXKw4vqfn3rLO\nFQCSCF1UpaQ7D5PC1aRJydfyjFYcDwCVIHRRdcZy52HEW4nvKo4HoNoIXVRUqXceXnfdFTF5snYP\nAFQ/oYuKGY87D7du/WREhBUtAKqelhGkwp2HANQCLSOoKhcGrMWLp8c3v3nUnYcA1DUrXYyrfJ3g\n33xz5MpVvhWtzs5N7xTBP2lVC4CqYqWLiii0CP7NN9sS/747DwGoJ0IXRRlbEfzZxM/Q1gGAemJ7\nkYIkNSs9cOArI8Ylbxm68xCA2mB7kXFT6P2G+ZqVJm8Z9sSqVfOjr8+KFgD1S+iqU2O5PDrpfsN8\nzUptGQJAMtuLdaCQFg6trefCVdKW4aRJt8eJE1+/4N29cemlj45oVmrLEIBaVkpuEbpq3FhaOCSH\nq4hJk1bGiRP/Z8T7mpUCUG/UdBERpbdwyHd5dL77DTUrBYDCCV0ZNJZ6rLG0cBgtXEW43xAASmF7\nscqVWo811hYOEaETPADkoaYrQ5JWqZYvX1Lw6tVY67He//61cerUNSNWr1atao6+vleEKwAYAzVd\nVarQi5+feeb/Jr6f1KphrPVYWjgAQHWw0jUOSl2lynfxc/Lq1eci4gsjxt5ww5r41a+uHbGipYUD\nAIwfK11lUOg2YL7Vq7GsUp09OzHPLJJWr5bGxIl/PaIeS7E7AFS3mgxdY62bKvQkYNI24H/918jV\nq/7++2LSpKRrcpJPDTY2vpn4fvJpwtGv1BGyAKA6VcX24tKlG0cNRqUGptbWjbFqVdOIwDRt2uqI\nuDKOHfuHYWPHdhJw8zs/wyU3FE0+NbhqVXPCiUSnCQGg2lTs9GJPT09s2LAhBgcH4y//8i/js5/9\n7Igx69evjyeeeCLe/e53x8MPPxzXX3/98Ak0NERELm8wKm9gSq6PyncS8MorPxW/+tXDBX1Gvhqr\nfKcGd+7cK1wBQJWrSOgaHByM973vfbFnz55oamqKG2+8MR599NFoa/v/dUu7du2Kbdu2xa5du2Lf\nvn1x9913R19f34jJR5ybQr6C8vIFps1R+CqVnlcAUO8qUki/f//+mDVrVsyYMSMiIlauXBk7duwY\nFroef/zxuP32c7VNN910U5w8eTJeffXVmDp16gWftjkiIn7zm5ciojci2of9NrnQPN/Uk1snJNdN\nja0z+6pVH4lvflONFQDUi97e3ujt7R2Xzyo6dB09ejRaWlqGXjc3N8e+ffsuOubIkSN5Q9fll78Y\nb73VPnKSZQpM06b9PCL+9oItytFPAt54414nBAGgTrS3t0d7e/vQ6y1bthT9WUWHrnPbghd34RJc\nvr+XfyWpnIHpU3nHRiSvUi1fvkTIAgDGrOjQ1dTUFAMDA0OvBwYGorm5edQxR44ciaamphGf1dm5\n6aIrSeUMTEIUAFBuRRfSnz17Nt73vvfFU089FdOnT48/+IM/GLWQvq+vLzZs2JBYSJ/1jvQAQH2o\nSCF9Y2NjbNu2LTo7O2NwcDBWr14dbW1tsX379oiIWLt2bdxyyy2xa9eumDVrVlx22WXx0EMPFft1\nAACZVhXNUa10AQBZUEpuuWSc5wIAQAKhCwAgBUIXAEAKhC4AgBQIXQAAKRC6AABSIHQBAKRA6AIA\nSIHQBQCQAqELACAFQhcAQAqELgCAFAhdAAApELoAAFIgdAEApEDoAgBIgdAFAJACoQsAIAVCFwBA\nCoQuAIAUCF0AACkQugAAUiB0AQCkQOgCAEiB0AUAkAKhCwAgBUIXAEAKhC4AgBQIXQAAKRC6AABS\nIHQBAKRA6AIASIHQBQCQAqELACAFQhcAQAqELgCAFAhdAAApELoAAFIgdAEApEDoAgBIgdAFAJAC\noQsAIAVCFwBACoQuAIAUCF0AACkQugAAUiB0AQCkQOgCAEiB0AUAkAKhCwAgBUIXAEAKhC4AgBQI\nXQAAKRC6AABSIHQBAKRA6AIASIHQBQCQAqELACAFQhcAQAqELgCAFAhdAAApELoAAFIgdAEApEDo\nAgBIgdBFSXp7eys9BUrg+WWXZ5dtnl99Kjp0vfbaa9HR0RG///u/H0uXLo2TJ0+OGDMwMBA333xz\nvP/9748tMekmAAAGsklEQVR58+bFgw8+WNJkqT7+4cg2zy+7PLts8/zqU9Gh6/7774+Ojo746U9/\nGh/72Mfi/vvvHzFmwoQJ8Y//+I/x/PPPR19fX3zlK1+JF198saQJAwBkUdGh6/HHH4/bb789IiJu\nv/32+I//+I8RY6ZNmxYLFy6MiIjLL7882tra4uc//3mxXwkAkFkNuVwuV8xfnDRpUpw4cSIiInK5\nXEyePHnodZLDhw/HRz7ykXj++efj8ssv//8TaGgo5usBACqiyOgUjaP9sqOjI44dOzbi/fvuu2/Y\n64aGhlHD029+85u47bbboqura1jgiih+4gAAWTJq6HryySfz/m7q1Klx7NixmDZtWrzyyitx7bXX\nJo47c+ZM3HrrrbFq1ar40z/909JmCwCQUUXXdK1YsSK+/vWvR0TE17/+9cRAlcvlYvXq1TF37tzY\nsGFD8bMEAMi4omu6XnvttfiLv/iL+NnPfhYzZsyIb3/723HVVVfFz3/+81izZk3s3LkzfvCDH8SS\nJUti/vz5Q9uPX/rSl2LZsmXj+j8CAKDaFb3SNXny5NizZ0/89Kc/jd27d8dVV10VERHTp0+PnTt3\nRkTEH/7hH8bbb78dP/nJT+LAgQPxpS99KTZs2BCzZ8+OBx54IPFz169fH7Nnz44FCxbEgQMHip0e\n46ynpyfmzJmT99k98sgjsWDBgpg/f3586EMfioMHD1ZgluRzsef3O88880w0NjbGd77znRRnx2gK\neXa9vb1x/fXXx7x586K9vT3dCTKqiz2/48ePx7Jly2LhwoUxb968ePjhh9OfJIk+/elPx9SpU+MD\nH/hA3jFjziy5lJw9ezbX2tqae/nll3OnT5/OLViwIPfCCy8MG7Nz587cH/3RH+VyuVyur68vd9NN\nN6U1PUZRyLN7+umncydPnszlcrncE0884dlVkUKe3+/G3Xzzzbnly5fn/u3f/q0CM+VChTy7EydO\n5ObOnZsbGBjI5XK53C9+8YtKTJUEhTy/z3/+87m///u/z+Vy557d5MmTc2fOnKnEdLnA3r17c88+\n+2xu3rx5ib8vJrOkdg3Q/v37Y9asWTFjxoyYMGFCrFy5Mnbs2DFszPm9v2666aY4efJkvPrqq2lN\nkTwKeXaLFy+OK6+8MiLOPbsjR45UYqokKOT5RUR0d3fHbbfdFlOmTKnALElSyLP71re+Fbfeems0\nNzdHRMQ111xTiamSoJDn9973vjdef/31iIh4/fXX4+qrr47GxlHPuJGSD3/4wzFp0qS8vy8ms6QW\nuo4ePRotLS1Dr5ubm+Po0aMXHeM/3pVXyLM731e/+tW45ZZb0pgaBSj0/3s7duyIO++8MyL0z6sW\nhTy7Q4cOxWuvvRY333xzLFq0KL7xjW+kPU3yKOT5rVmzJp5//vmYPn16LFiwILq6utKeJkUqJrOk\nFqcL/Uc8d0Fdv3/8K28sz+B73/tefO1rX4sf/vCHZZwRY1HI89uwYUPcf//90dDQELlcTv+8KlHI\nsztz5kw8++yz8dRTT8Ubb7wRixcvjg9+8IMxe/bsFGbIaAp5fl/84hdj4cKF0dvbG/39/dHR0RHP\nPfdcXHHFFSnMkFKNNbOkFrqamppiYGBg6PXAwMDQcni+MUeOHImmpqa0pkgehTy7iIiDBw/GmjVr\noqenZ9QlWdJVyPP78Y9/HCtXroyIc4W9TzzxREyYMCFWrFiR6lwZrpBn19LSEtdcc01MnDgxJk6c\nGEuWLInnnntO6KoChTy/p59+OjZu3BgREa2trXHdddfFSy+9FIsWLUp1roxdUZll3CrOLuLMmTO5\nmTNn5l5++eXcW2+9ddFC+h/96EeKsatEIc/uf//3f3Otra25H/3oRxWaJfkU8vzO96lPfSr37//+\n7ynOkHwKeXYvvvhi7mMf+1ju7Nmzud/+9re5efPm5Z5//vkKzZjzFfL8/uZv/ia3efPmXC6Xyx07\ndizX1NSU++Uvf1mJ6ZLg5ZdfLqiQvtDMktpKV2NjY2zbti06OztjcHAwVq9eHW1tbbF9+/aIiFi7\ndm3ccsstsWvXrpg1a1Zcdtll8dBDD6U1PUZRyLPbunVrnDhxYqgmaMKECbF///5KTpt3FPL8qE6F\nPLs5c+bEsmXLYv78+XHJJZfEmjVrYu7cuRWeORGFPb977rkn7rjjjliwYEG8/fbb8eUvfzkmT55c\n4ZkTEfGJT3wivv/978fx48ejpaUltmzZEmfOnImI4jNL0c1RAQAoXGqnFwEA6pnQBQCQAqELACAF\nQhcAQAqELgCAFAhdAAAp+H8cFIZa7+PGawAAAABJRU5ErkJggg==\n"
       }
      ],
-     "prompt_number": 50
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -86,7 +69,7 @@
        ]
       }
      ],
-     "prompt_number": 51
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -113,15 +96,14 @@
        ]
       }
      ],
-     "prompt_number": 52
+     "prompt_number": 9
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "*Idea* : use Ms=g, and m=f to represent spatially varying magnetisation magnitude"
+     ]
     }
    ],
    "metadata": {}
