--- a/doc/ipython_notebooks_src/tutorial-saving-averages-demo.ipynb
+++ b/doc/ipython_notebooks_src/tutorial-saving-averages-demo.ipynb
@@ -123,9 +123,8 @@
      "collapsed": false,
      "input": [
       "import finmag.util\n",
-      "import finmag.util.save_averages\n",
-      "reload(finmag.util.save_averages)\n",
-      "tablef = finmag.util.save_averages.Writer('data.ndt', sim, override = True)"
+      "import finmag.util.fileio\n",
+      "tablef = finmag.util.fileio.Tablewriter('data.ndt', sim, override = True)"
      ],
      "language": "python",
      "metadata": {},
@@ -388,11 +387,23 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "data = finmag.util.save_averages.Reader('data.ndt')"
+      "data = finmag.util.fileio.Tablereader('data.ndt')"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "AttributeError",
+       "evalue": "'module' object has no attribute 'fileio'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-62-6f7aee06fb1e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfinmag\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfileio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTablereader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data.ndt'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mAttributeError\u001b[0m: 'module' object has no attribute 'fileio'"
+       ]
+      }
+     ],
+     "prompt_number": 62
     },
     {
      "cell_type": "code",
