--- a/doc/ipython_notebooks_src/tutorial-use-of-logging.ipynb
+++ b/doc/ipython_notebooks_src/tutorial-use-of-logging.ipynb
@@ -39,14 +39,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We expect different kinds of logging output when this simulation starts:"
+      "We expect different kinds of logging output when this simulation starts (the ``--logcol=none`` supresses coloured output and is not important here):"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "!python demosim.py"
+      "!python demosim.py --logcol=none "
      ],
      "language": "python",
      "metadata": {},
@@ -55,44 +55,38 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\u001b[30m[19:43:46] DEBUG: Building modules in 'native'...\u001b[0m\r\n"
+        "[21:01:42] DEBUG: Building modules in 'native'...\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\u001b[30m[19:43:48] DEBUG: This is Finmag version 2292:aa3c48018491c35bb2b7dabcd6fae62d5146773a\u001b[0m\r\n",
-        "\u001b[34m[19:43:48] INFO: Creating Sim object 'barmini'' (rank=0/1) [Sun Dec  2 19:43:48 2012].\u001b[0m\r\n",
-        "\u001b[34m[19:43:48] INFO: <Mesh of topological dimension 3 (tetrahedra) with 45 vertices and 96 cells, ordered>\u001b[0m\r\n"
+        "[21:01:44] DEBUG: This is Finmag version 2293:91a77ee7901b8eb0b8c0f94b7b1938645eabceac\r\n",
+        "[21:01:44] INFO: Creating Sim object 'barmini'' (rank=0/1) [Sun Dec  2 21:01:44 2012].\r\n",
+        "[21:01:44] INFO: <Mesh of topological dimension 3 (tetrahedra) with 45 vertices and 96 cells, ordered>\r\n",
+        "[21:01:44] DEBUG: Creating LLG object.\r\n",
+        "[21:01:44] DEBUG: Creating Exchange object with method box-matrix-petsc, in Jacobian.\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\u001b[30m[19:43:48] DEBUG: Creating LLG object.\u001b[0m\r\n",
-        "\u001b[30m[19:43:48] DEBUG: Creating Exchange object with method box-matrix-petsc, in Jacobian.\u001b[0m\r\n"
+        "[21:01:44] DEBUG: Creating Demag object with FK solver.\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\u001b[30m[19:43:48] DEBUG: Creating Demag object with FK solver.\u001b[0m\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\u001b[30m[19:43:48] DEBUG: Demag: Poisson solver parameters.\u001b[0m\r\n",
+        "[21:01:44] DEBUG: Demag: Poisson solver parameters.\r\n",
         "    {'maximum_iterations': 10000, 'divergence_limit': 10000.0, 'relative_tolerance': 1e-06, 'gmres':\r\n",
         "    {'restart': 30}, 'preconditioner': {'shift_nonzero': 0.0, 'reuse': False,\r\n",
         "    'same_nonzero_pattern': False, 'ilu': {'fill_level': 0}, 'schwarz': {'overlap': 1}, 'report':\r\n",
         "    False}, 'error_on_nonconvergence': True, 'monitor_convergence': False, 'nonzero_initial_guess':\r\n",
         "    False, 'report': True, 'absolute_tolerance': 1e-15}\r\n",
-        "\u001b[30m[19:43:48] DEBUG: Demag: Laplace solver parameters.\u001b[0m\r\n",
+        "[21:01:44] DEBUG: Demag: Laplace solver parameters.\r\n",
         "    {'maximum_iterations': 10000, 'divergence_limit': 10000.0, 'relative_tolerance': 1e-06, 'gmres':\r\n",
         "    {'restart': 30}, 'preconditioner': {'shift_nonzero': 0.0, 'reuse': False,\r\n",
         "    'same_nonzero_pattern': True, 'ilu': {'fill_level': 0}, 'schwarz': {'overlap': 1}, 'report':\r\n",
@@ -101,7 +95,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -128,7 +122,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "!python demosim.py --verbosity=info"
+      "!python demosim.py --verbosity=info --logcol=none"
      ],
      "language": "python",
      "metadata": {},
@@ -137,12 +131,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\u001b[34m[19:43:50] INFO: Creating Sim object 'barmini'' (rank=0/1) [Sun Dec  2 19:43:50 2012].\u001b[0m\r\n",
-        "\u001b[34m[19:43:50] INFO: <Mesh of topological dimension 3 (tetrahedra) with 45 vertices and 96 cells, ordered>\u001b[0m\r\n"
+        "[21:02:28] INFO: Creating Sim object 'barmini'' (rank=0/1) [Sun Dec  2 21:02:28 2012].\r\n",
+        "[21:02:28] INFO: <Mesh of topological dimension 3 (tetrahedra) with 45 vertices and 96 cells, ordered>\r\n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
