Document the new set_logging_level command in the tutorial notebook.

--- a/doc/ipython_notebooks_src/tutorial-use-of-logging.ipynb
+++ b/doc/ipython_notebooks_src/tutorial-use-of-logging.ipynb
@@ -25,10 +25,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "s = \"\"\"import finmag\n",
+      "s = \"\"\"\\\n",
+      "import finmag\n",
       "sim = finmag.example.barmini()\n",
       "\"\"\"\n",
-      "open(\"demosim.py\",\"w\").write(s)"
+      "with open(\"demosim.py\", \"w\") as f:\n",
+      "    f.write(s)"
      ],
      "language": "python",
      "metadata": {},
@@ -55,38 +57,44 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[21:01:42] DEBUG: Building modules in 'native'...\r\n"
+        "[11:13:56] DEBUG: Building modules in 'native'...\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[21:01:44] DEBUG: This is Finmag version 2293:91a77ee7901b8eb0b8c0f94b7b1938645eabceac\r\n",
-        "[21:01:44] INFO: Creating Sim object 'barmini'' (rank=0/1) [Sun Dec  2 21:01:44 2012].\r\n",
-        "[21:01:44] INFO: <Mesh of topological dimension 3 (tetrahedra) with 45 vertices and 96 cells, ordered>\r\n",
-        "[21:01:44] DEBUG: Creating LLG object.\r\n",
-        "[21:01:44] DEBUG: Creating Exchange object with method box-matrix-petsc, in Jacobian.\r\n"
+        "[11:13:57] DEBUG: This is Finmag version 2311:3d3f81d39dcb9b8207dcb18b40c74fb831e21444\r\n",
+        "[11:13:57] INFO: Creating Sim object 'barmini'' (rank=0/1) [Tue Dec  4 11:13:57 2012].\r\n",
+        "[11:13:57] INFO: <Mesh of topological dimension 3 (tetrahedra) with 45 vertices and 96 cells, ordered>\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[21:01:44] DEBUG: Creating Demag object with FK solver.\r\n"
+        "[11:13:57] DEBUG: Creating LLG object.\r\n",
+        "[11:13:57] DEBUG: Creating Exchange object with method box-matrix-petsc, in Jacobian.\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[21:01:44] DEBUG: Demag: Poisson solver parameters.\r\n",
+        "[11:13:57] DEBUG: Creating Demag object with FK solver.\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[11:13:57] DEBUG: Demag: Poisson solver parameters.\r\n",
         "    {'maximum_iterations': 10000, 'divergence_limit': 10000.0, 'relative_tolerance': 1e-06, 'gmres':\r\n",
         "    {'restart': 30}, 'preconditioner': {'shift_nonzero': 0.0, 'reuse': False,\r\n",
         "    'same_nonzero_pattern': False, 'ilu': {'fill_level': 0}, 'schwarz': {'overlap': 1}, 'report':\r\n",
         "    False}, 'error_on_nonconvergence': True, 'monitor_convergence': False, 'nonzero_initial_guess':\r\n",
         "    False, 'report': True, 'absolute_tolerance': 1e-15}\r\n",
-        "[21:01:44] DEBUG: Demag: Laplace solver parameters.\r\n",
+        "[11:13:57] DEBUG: Demag: Laplace solver parameters.\r\n",
         "    {'maximum_iterations': 10000, 'divergence_limit': 10000.0, 'relative_tolerance': 1e-06, 'gmres':\r\n",
         "    {'restart': 30}, 'preconditioner': {'shift_nonzero': 0.0, 'reuse': False,\r\n",
         "    'same_nonzero_pattern': True, 'ilu': {'fill_level': 0}, 'schwarz': {'overlap': 1}, 'report':\r\n",
@@ -95,7 +103,7 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -131,12 +139,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[21:02:28] INFO: Creating Sim object 'barmini'' (rank=0/1) [Sun Dec  2 21:02:28 2012].\r\n",
-        "[21:02:28] INFO: <Mesh of topological dimension 3 (tetrahedra) with 45 vertices and 96 cells, ordered>\r\n"
+        "[11:14:19] INFO: Creating Sim object 'barmini'' (rank=0/1) [Tue Dec  4 11:14:19 2012].\r\n",
+        "[11:14:19] INFO: <Mesh of topological dimension 3 (tetrahedra) with 45 vertices and 96 cells, ordered>\r\n"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -149,8 +157,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If you find that you want to change the loglevel by default to info, say, you can do so by editing the file ``~/.finmagrc`` and adding a line to the logging section, i.e.\n",
-      "\n",
+      "If you find that you want to change the loglevel by default to info, say, you can do so by editing the file ``~/.finmagrc`` and adding a line to the logging section:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "``[logging]``\n",
       "\n",
       "``console_logging_level=info``"
@@ -167,7 +180,55 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This option gives greatest flexibility but also requires more low level Python commands. First, we need to get access to the logger object. This can be done from within any Python program - the link is created through the name ``finmag`` of the logger:"
+      "The simplest way to change the logging level from inside a script is as follows:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from finmag.util.helpers import set_logging_level\n",
+      "set_logging_level(\"INFO\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[11:15:39] DEBUG: Building modules in 'native'...\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[11:15:40] DEBUG: This is Finmag version 2311:3d3f81d39dcb9b8207dcb18b40c74fb831e21444\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### \"Under the hood\""
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Here we describe the more low-level approach of changing the logging level, which is also how the logging level is set internally in Finmag. This option gives greatest flexibility because it allows to emit one's own logging messages for the desired level, but it also requires more low-level Python commands. "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "First, we need to get access to the logger object. This can be done from within any Python program - the link is created through the name ``finmag`` of the logger:"
      ]
     },
     {
@@ -180,23 +241,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "[19:43:51] DEBUG: Building modules in 'native'...\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "[19:43:52] DEBUG: This is Finmag version 2292:aa3c48018491c35bb2b7dabcd6fae62d5146773a\n"
-       ]
-      }
-     ],
-     "prompt_number": 4
+     "outputs": [],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -231,60 +277,68 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[19:45:58] DEBUG: This is debug message\n"
+        "[11:17:32] DEBUG: This is debug message\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[19:45:58] INFO: This is of level info\n"
+        "[11:17:32] INFO: This is of level info\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[19:45:58] WARNING: This is a Warning!\n"
+        "[11:17:32] WARNING: This is a Warning!\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[19:45:58] INFO: About to change loglevel to INFO\n"
+        "[11:17:32] INFO: About to change loglevel to INFO\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[19:45:58] INFO: Another info message\n"
+        "[11:17:32] INFO: Another info message\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[19:45:58] WARNING: Another warning\n"
+        "[11:17:32] WARNING: Another warning\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[19:45:58] INFO: Changing loglevel to WARN\n"
+        "[11:17:32] INFO: Changing loglevel to WARN\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[19:45:58] WARNING: Another warning message\n"
+        "[11:17:32] WARNING: Another warning message\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
