Correcting title level, and adding another subtitle for consistency (with Max)

--- a/doc/ipython_notebooks_src/tutorial-saving-averages-demo.ipynb
+++ b/doc/ipython_notebooks_src/tutorial-saving-averages-demo.ipynb
@@ -18,6 +18,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "### Writing data to file"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "We generally want to save some of the simulation data when we run a simulation. Saving the average magnetisation vector as a function of time is a common task, and one method of doing this explicitly is describe here."
      ]
     },
@@ -397,7 +404,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Post processing"
+      "### Post processing"
      ]
     },
     {
