fix the fix: no units rather than seconds for normalised magnetisation.

--- a/doc/ipython_notebooks_src/tutorial-saving-averages-demo.ipynb
+++ b/doc/ipython_notebooks_src/tutorial-saving-averages-demo.ipynb
@@ -41,21 +41,21 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:43:19] INFO: Finmag logging output will be appended to file: '/home/fangohr/.finmag/global.log'\n"
+        "[2012-12-07 17:06:23] INFO: Finmag logging output will be appended to file: '/home/fangohr/.finmag/global.log'\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:43:19] DEBUG: Building modules in 'native'...\n"
+        "[2012-12-07 17:06:23] DEBUG: Building modules in 'native'...\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:43:20] DEBUG: This is Finmag version 2347:4744ab4448530668fa106b3379ddeb8bdc6b06c3\n"
+        "[2012-12-07 17:06:24] DEBUG: This is Finmag version 2356:2ea0c7105fa7d0a51d9a336346e5b3acf19f0ae9\n"
        ]
       }
      ],
@@ -81,56 +81,56 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:43:20] INFO: Finmag logging output will be appended to file: '/home/fangohr/hg/finmag/doc/ipython_notebooks_src/barmini.log'\n"
+        "[2012-12-07 17:06:24] INFO: Finmag logging output will be appended to file: '/home/fangohr/hg/finmag/doc/ipython_notebooks_src/barmini.log'\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:43:20] DEBUG: Creating DataWriter for file 'barmini.ndt'\n"
+        "[2012-12-07 17:06:24] DEBUG: Creating DataWriter for file 'barmini.ndt'\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:43:20] INFO: Creating Sim object 'barmini' (rank=0/1) [Fri Dec  7 16:43:20 2012].\n"
+        "[2012-12-07 17:06:24] INFO: Creating Sim object 'barmini' (rank=0/1) [Fri Dec  7 17:06:24 2012].\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:43:20] INFO: <Mesh of topological dimension 3 (tetrahedra) with 45 vertices and 96 cells, ordered>\n"
+        "[2012-12-07 17:06:24] INFO: <Mesh of topological dimension 3 (tetrahedra) with 45 vertices and 96 cells, ordered>\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:43:20] DEBUG: Creating LLG object.\n"
+        "[2012-12-07 17:06:24] DEBUG: Creating LLG object.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:43:21] DEBUG: Creating Exchange object with method box-matrix-petsc, in Jacobian.\n"
+        "[2012-12-07 17:06:24] DEBUG: Creating Exchange object with method box-matrix-petsc, in Jacobian.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:43:21] DEBUG: Creating Demag object with FK solver.\n"
+        "[2012-12-07 17:06:25] DEBUG: Creating Demag object with FK solver.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:43:21] DEBUG: Demag: Poisson solver parameters.\n",
+        "[2012-12-07 17:06:25] DEBUG: Demag: Poisson solver parameters.\n",
         "    {'maximum_iterations': 10000, 'divergence_limit': 10000.0, 'relative_tolerance': 1e-06, 'gmres':\n",
         "    {'restart': 30}, 'preconditioner': {'shift_nonzero': 0.0, 'reuse': False,\n",
         "    'same_nonzero_pattern': False, 'ilu': {'fill_level': 0}, 'schwarz': {'overlap': 1}, 'report':\n",
@@ -142,7 +142,7 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:43:21] DEBUG: Demag: Laplace solver parameters.\n",
+        "[2012-12-07 17:06:25] DEBUG: Demag: Laplace solver parameters.\n",
         "    {'maximum_iterations': 10000, 'divergence_limit': 10000.0, 'relative_tolerance': 1e-06, 'gmres':\n",
         "    {'restart': 30}, 'preconditioner': {'shift_nonzero': 0.0, 'reuse': False,\n",
         "    'same_nonzero_pattern': True, 'ilu': {'fill_level': 0}, 'schwarz': {'overlap': 1}, 'report':\n",
@@ -195,7 +195,7 @@
        "stream": "stdout",
        "text": [
         "           time             m_x             m_y             m_z \r\n",
-        "              s             A/m             A/m             A/m \r\n",
+        "            <s>              <>              <>              <> \r\n",
         "              0        0.707107               0        0.707107 \r\n"
        ]
       }
@@ -232,7 +232,7 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-07 16:44:16] DEBUG: Creating LLGIntegrator with backend sundials.\n"
+        "[2012-12-07 17:06:25] DEBUG: Creating LLGIntegrator with backend sundials.\n"
        ]
       },
       {
@@ -419,7 +419,7 @@
        "stream": "stdout",
        "text": [
         "           time             m_x             m_y             m_z \r\n",
-        "              s             A/m             A/m             A/m \r\n",
+        "            <s>              <>              <>              <> \r\n",
         "              0        0.707107               0        0.707107 \r\n",
         "              0        0.707107               0        0.707107 \r\n",
         "    5.26316e-12        0.660831        0.102432        0.743493 \r\n",
@@ -490,7 +490,7 @@
        "output_type": "pyout",
        "prompt_number": 8,
        "text": [
-        "<matplotlib.legend.Legend at 0x359d6d0>"
+        "<matplotlib.legend.Legend at 0x39737d0>"
        ]
       },
       {
