Fixed Skyrmion documentation. Note: nbconvert can't deal with $$ yet, better to use \begin{equation} and \end{equation}.

--- a/doc/ipython_notebooks_src/SkyrmionExample1.ipynb
+++ b/doc/ipython_notebooks_src/SkyrmionExample1.ipynb
@@ -390,9 +390,12 @@
      "metadata": {},
      "source": [
       "##Adding energy terms into the simulation\n",
+      "\n",
       "After the simulation object is created, required energy terms for the skyrmion formation must be added into the simulation.\n",
-      "Exchange energy term $$E_{ex} = A\\int_{\\Omega}(\\nabla \\vec{M})^{2}dV$$ which is uniquely characterised by exchange energy constant $A$ can be created by using already imported **Exchange** class, where exchange energy parameter is added as an argument. If \n",
-      "$$A=1\\cdot10^{-11} J/m$$ \n",
+      "Exchange energy term \n",
+      "\\begin{equation} E_\\mathrm{ex} = A\\int_{\\Omega}(\\nabla \\vec{M})^{2} dV \\end{equation} \n",
+      "which is uniquely characterised by exchange energy constant $A$ can be created by using already imported **Exchange** class, where exchange energy parameter is added as an argument. If \n",
+      "\\begin{equation} A=1\\cdot10^{-11} \\mathrm{J/m}\\end{equation} \n",
       "exchange object is created in the following way:"
      ]
     },
@@ -420,7 +423,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Similarly, DMI energy term $$E_{DMI}=D\\int_{\\Omega}\\vec{M}\\cdot(\\nabla\\times\\vec{M})dV$$ which is characterised by Dzyaloshinskii-Moriya energy parameter can be created by using the **DMI** method which taked the value of $D$ as an argument. According to equation: $$L_{D}=\\frac{4\\pi A}{|D|}$$ where $L_{D}$ is the characteristic length of spiral modulation, parameter $D$ can be estimated. For instance, in the case of MnSi, the $L_{D}$ parameter is $18$ nm and accordingly DMI energy parameter is: $$D = 6.98\\cdot10^{-3} J/m^{2}$$ "
+      "Similarly, DMI energy term \n",
+      "\\begin{equation} \n",
+      "E_{DMI}=D\\int_{\\Omega}\\vec{M}\\cdot(\\nabla\\times\\vec{M})dV\n",
+      "\\end{equation}\n",
+      "which is characterised by Dzyaloshinskii-Moriya energy parameter can be created by using the **DMI** method which taked the value of $D$ as an argument. According to equation: \n",
+      "\\begin{equation}\n",
+      "L_{D}=\\frac{4\\pi A}{|D|}\n",
+      "\\end{equation}\n",
+      "where $L_{D}$ is the characteristic length of spiral modulation, parameter $D$ can be estimated. For instance, in the case of MnSi, the $L_{D}$ parameter is $18$ nm and accordingly DMI energy parameter is: $$D = 6.98\\cdot10^{-3} J/m^{2}$$ "
      ]
     },
     {
@@ -448,7 +459,9 @@
      "metadata": {},
      "source": [
       "The final energy term which must be included into the simulation is Zeeman energy: \n",
-      "$$E_{H}=-\\mu_{0}\\int_{\\Omega}\\vec{M}\\cdot\\vec{H}dV$$\n",
+      "\\begin{equation}\n",
+      "E_{H}=-\\mu_{0}\\int_{\\Omega}\\vec{M}\\cdot\\vec{H}dV\n",
+      "\\end{equation}\n",
       "which requires the value of $\\vec{H}$ as a list of three external field components $[H_{x},H_{y},H_{z}]$. If the external field is applied only in z direction with $H_{z}=1.6\\cdot10^{6} A/m$, the zeeman object is created:"
      ]
     },
